Merge branch 'remote-config'